--- a/House Price Prediction.ipynb
+++ b/House Price Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "901cb2ed",
    "metadata": {},
    "outputs": [
@@ -10,80 +10,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: matplotlib in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (3.5.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (4.36.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: numpy>=1.17 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (1.21.5)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (9.2.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Requirement already satisfied: typing-extensions; python_version < \"3.8\" in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib) (4.3.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 19.0.2, however version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: seaborn in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (0.11.2)\n",
-      "Requirement already satisfied: numpy>=1.15 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from seaborn) (1.21.5)\n",
-      "Requirement already satisfied: pandas>=0.23 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from seaborn) (1.3.5)\n",
-      "Requirement already satisfied: scipy>=1.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from seaborn) (1.7.3)\n",
-      "Requirement already satisfied: matplotlib>=2.2 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from seaborn) (3.5.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from pandas>=0.23->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from pandas>=0.23->seaborn) (2022.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.2.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.36.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.4.4)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from python-dateutil>=2.7.3->pandas>=0.23->seaborn) (1.16.0)\n",
-      "Requirement already satisfied: typing-extensions; python_version < \"3.8\" in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib>=2.2->seaborn) (4.3.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 19.0.2, however version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Requirement already satisfied: matplotlib in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (3.5.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (4.37.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (9.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib) (1.21.6)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib) (4.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (0.11.2)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from seaborn) (3.5.3)\n",
+      "Requirement already satisfied: scipy>=1.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from seaborn) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from seaborn) (1.21.6)\n",
+      "Requirement already satisfied: pandas>=0.23 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from seaborn) (1.1.5)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.37.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.4.4)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.9)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from pandas>=0.23->seaborn) (2022.2.1)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib>=2.2->seaborn) (4.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n",
       "Collecting sklearn\n",
-      "  Using cached https://files.pythonhosted.org/packages/1e/7a/dbb3be0ce9bd5c8b7e3d87328e79063f8b263b2b1bfa4774cb1147bfcd3f/sklearn-0.0.tar.gz\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\user\\appdata\\roaming\\python\\python37\\site-packages (from sklearn) (0.20.2)\n",
-      "Requirement already satisfied: scipy>=0.13.3 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from scikit-learn->sklearn) (1.7.3)\n",
-      "Requirement already satisfied: numpy>=1.8.2 in d:\\anaconda\\envs\\tensorflow\\lib\\site-packages (from scikit-learn->sklearn) (1.21.5)\n",
+      "  Using cached sklearn-0.0.tar.gz (1.1 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.0.2-cp37-cp37m-win_amd64.whl (7.1 MB)\n",
+      "     ---------------------------------------- 7.1/7.1 MB 481.7 kB/s eta 0:00:00\n",
+      "Collecting joblib>=0.11\n",
+      "  Using cached joblib-1.1.0-py2.py3-none-any.whl (306 kB)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from scikit-learn->sklearn) (1.21.6)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\user\\desktop\\data_science_program\\machine_learning_projects\\house_price_model\\house-price-prediction\\venv\\lib\\site-packages (from scikit-learn->sklearn) (1.7.3)\n",
+      "Collecting threadpoolctl>=2.0.0\n",
+      "  Using cached threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
       "Building wheels for collected packages: sklearn\n",
       "  Building wheel for sklearn (setup.py): started\n",
       "  Building wheel for sklearn (setup.py): finished with status 'done'\n",
-      "  Stored in directory: C:\\Users\\User\\AppData\\Local\\pip\\Cache\\wheels\\76\\03\\bb\\589d421d27431bcd2c6da284d5f2286c8e3b2ea3cf1594c074\n",
+      "  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1304 sha256=62e32a116aa250e01618248e3fbe2215fdfc6723a1c439926f8ee36ecc8d4434\n",
+      "  Stored in directory: c:\\users\\user\\appdata\\local\\pip\\cache\\wheels\\46\\ef\\c3\\157e41f5ee1372d1be90b09f74f82b10e391eaacca8f22d33e\n",
       "Successfully built sklearn\n",
-      "Installing collected packages: sklearn\n",
-      "Successfully installed sklearn-0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 19.0.2, however version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+      "Installing collected packages: threadpoolctl, joblib, scikit-learn, sklearn\n",
+      "Successfully installed joblib-1.1.0 scikit-learn-1.0.2 sklearn-0.0 threadpoolctl-3.1.0\n"
      ]
     }
    ],
@@ -95,12 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d8ba857f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -2599,8 +2571,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4ac15327e08736cb9ecd1f6ad6dddad38c545bfdadda4cd0eb963de892dc78fe"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.0 (conda)",
    "language": "python",
    "name": "python3"
   },
