--- a/House Price Prediction.ipynb
+++ b/House Price Prediction.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a302db58",
    "metadata": {},
    "outputs": [],
@@ -100,17 +100,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "6d6a8e3c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+      "\n",
+      "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+      "    the documentation of this function for further details.\n",
+      "\n",
+      "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+      "    dataset unless the purpose of the code is to study and educate about\n",
+      "    ethical issues in data science and machine learning.\n",
+      "\n",
+      "    In this special case, you can fetch the dataset from the original\n",
+      "    source::\n",
+      "\n",
+      "        import pandas as pd\n",
+      "        import numpy as np\n",
+      "\n",
+      "\n",
+      "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "        target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "    Alternative datasets include the California housing dataset (i.e.\n",
+      "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+      "    dataset. You can load the datasets as follows::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_california_housing\n",
+      "        housing = fetch_california_housing()\n",
+      "\n",
+      "    for the California housing dataset and::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_openml\n",
+      "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "    for the Ames housing dataset.\n",
+      "    \n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename'])"
+       "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e690ce1e",
    "metadata": {},
    "outputs": [],
@@ -359,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "c9a4b009",
    "metadata": {},
    "outputs": [],
@@ -370,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "7c102f35",
    "metadata": {},
    "outputs": [
@@ -517,7 +559,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "id": "f35368ab",
    "metadata": {},
    "outputs": [],
@@ -1617,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "id": "c0fbd131",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1800,7 @@
        "4     18.7  396.90   5.33  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "id": "dfe6c175",
    "metadata": {},
    "outputs": [],
@@ -1984,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "36f5f0eb",
    "metadata": {},
    "outputs": [],
@@ -1996,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "id": "abd4a069",
    "metadata": {},
    "outputs": [],
@@ -2006,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "id": "5539efb8",
    "metadata": {},
    "outputs": [],
@@ -2024,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "id": "1737420e",
    "metadata": {},
    "outputs": [],
@@ -2034,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "78ea4f65",
    "metadata": {},
    "outputs": [],
@@ -2044,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 18,
    "id": "f1bed910",
    "metadata": {},
    "outputs": [],
@@ -2054,25 +2096,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 19,
    "id": "eb9c704e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+      "\n",
+      "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+      "    the documentation of this function for further details.\n",
+      "\n",
+      "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+      "    dataset unless the purpose of the code is to study and educate about\n",
+      "    ethical issues in data science and machine learning.\n",
+      "\n",
+      "    In this special case, you can fetch the dataset from the original\n",
+      "    source::\n",
+      "\n",
+      "        import pandas as pd\n",
+      "        import numpy as np\n",
+      "\n",
+      "\n",
+      "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "        target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "    Alternative datasets include the California housing dataset (i.e.\n",
+      "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+      "    dataset. You can load the datasets as follows::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_california_housing\n",
+      "        housing = fetch_california_housing()\n",
+      "\n",
+      "    for the California housing dataset and::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_openml\n",
+      "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "    for the Ames housing dataset.\n",
+      "    \n",
+      "  warnings.warn(msg, category=FutureWarning)\n",
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[-0.05485,  0.     ,  0.     ,  0.     ,  0.     , -0.373  ,\n",
-       "        -8.4    ,  0.2454 ,  0.     ,  0.     ,  0.     , -5.81   ,\n",
-       "        -3.35   ]])"
+       "array([[-0.38631918,  0.05164166, -0.5359028 , -0.25      , -0.4184504 ,\n",
+       "        -0.45902257,  0.47602847,  1.4001697 , -0.555902  , -0.60247683,\n",
+       "        -1.39296019,  0.38403458,  0.59957334]])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scaling_model.transform(load_boston().data[9].reshape(1,-1))"
+    "# scaling_model.transform(load_boston().data[9].reshape(1,-1))"
    ]
   },
   {
@@ -2085,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "id": "fa7e50c8",
    "metadata": {},
    "outputs": [],
@@ -2095,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "id": "2b4521e6",
    "metadata": {},
    "outputs": [],
@@ -2105,18 +2191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "id": "df39812e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-       "         normalize=False)"
+       "LinearRegression()"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "id": "d485c909",
    "metadata": {},
    "outputs": [
@@ -2193,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "id": "df05691c",
    "metadata": {},
    "outputs": [],
@@ -2428,33 +2513,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 26,
    "id": "6c51bc41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[6.320e-03, 1.800e+01, 2.310e+00, 0.000e+00, 5.380e-01, 6.575e+00,\n",
-       "        6.520e+01, 4.090e+00, 1.000e+00, 2.960e+02, 1.530e+01, 3.969e+02,\n",
-       "        4.980e+00]])"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "load_boston().data[0].reshape(1,-1)"
+    "# load_boston().data[0].reshape(1,-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "id": "3aa39d96",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -2463,7 +2543,7 @@
        "        -1.34802599,  0.50224404, -1.08370901]])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2475,17 +2555,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 28,
    "id": "6758847d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+      "\n",
+      "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+      "    the documentation of this function for further details.\n",
+      "\n",
+      "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+      "    dataset unless the purpose of the code is to study and educate about\n",
+      "    ethical issues in data science and machine learning.\n",
+      "\n",
+      "    In this special case, you can fetch the dataset from the original\n",
+      "    source::\n",
+      "\n",
+      "        import pandas as pd\n",
+      "        import numpy as np\n",
+      "\n",
+      "\n",
+      "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "        target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "    Alternative datasets include the California housing dataset (i.e.\n",
+      "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+      "    dataset. You can load the datasets as follows::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_california_housing\n",
+      "        housing = fetch_california_housing()\n",
+      "\n",
+      "    for the California housing dataset and::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_openml\n",
+      "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "    for the Ames housing dataset.\n",
+      "    \n",
+      "  warnings.warn(msg, category=FutureWarning)\n",
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([29.4332683])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 29,
    "id": "0f9bbeaf",
    "metadata": {},
    "outputs": [],
@@ -2514,7 +2638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 30,
    "id": "6b1538a9",
    "metadata": {},
    "outputs": [],
@@ -2524,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 31,
    "id": "5b1afe24",
    "metadata": {},
    "outputs": [],
@@ -2542,17 +2666,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 32,
    "id": "be441c0e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+      "\n",
+      "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+      "    the documentation of this function for further details.\n",
+      "\n",
+      "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+      "    dataset unless the purpose of the code is to study and educate about\n",
+      "    ethical issues in data science and machine learning.\n",
+      "\n",
+      "    In this special case, you can fetch the dataset from the original\n",
+      "    source::\n",
+      "\n",
+      "        import pandas as pd\n",
+      "        import numpy as np\n",
+      "\n",
+      "\n",
+      "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "        target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "    Alternative datasets include the California housing dataset (i.e.\n",
+      "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+      "    dataset. You can load the datasets as follows::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_california_housing\n",
+      "        housing = fetch_california_housing()\n",
+      "\n",
+      "    for the California housing dataset and::\n",
+      "\n",
+      "        from sklearn.datasets import fetch_openml\n",
+      "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "    for the Ames housing dataset.\n",
+      "    \n",
+      "  warnings.warn(msg, category=FutureWarning)\n",
+      "c:\\Users\\User\\Desktop\\Data_Science_Program\\MACHINE_LEARNING_PROJECTS\\House_Price_Model\\House-Price-Prediction\\venv\\lib\\site-packages\\sklearn\\base.py:451: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  \"X does not have valid feature names, but\"\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([29.4332683])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
